--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </ul>
 
   <h2>الأفلام المفضلة</h2>
-  <p>واحد من الأفلام المفضلة عندي هو <a href="https://www.imdb.com">The film</a>.</p>
+  <p>واحد من الأفلام المفضلة عندي هو <a href="https://google.com">The film</a>.</p>
 
   <h2>الكتب المفضلة</h2>
   <p>بحب قراءة كتب الخيال العلمي والروايات الأدبية.</p>
